slight alteration to material

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -27,8 +27,10 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
+          
+          
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>As the percentage of smokers increase, so does the healhcare costs</p>
+          <p>A comparison of smoking percentage vs age</p>
 
           <!-- <p>D3 Scatterplot</p> -->
         </div>
